# PatentDocumentEditor

./: README.md  docker-compose.yml  for_reviewer.md
client/: Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
client/src/: AIEditorPanel.tsx  App.tsx  Document.tsx  Editor.tsx  LoadingOverlay.tsx  index.css
server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
server/app/: __main__.py  ai_editor.py  data.py  db.py  html_safety.py  models.py  schemas.py
server/tests/: test_ai_editor.py  test_document_versioning.py
