[project]
name = "engineering-challenge-server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn>=0.32.0,<0.33",
    "openai>=1.57.0,<2.0",
    "pydantic>=2.10.0,<3.0",
    "python-dotenv>=1.0.1,<2.0",
    "sqlalchemy>=2.0.36,<3.0",
    "httpx>=0.28.0,<0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

